multi_index_map_derive2/tests/ui/generic.stderr
error: MultiIndexMap2 does not support generic structs yet
 --> tests/ui/generic.rs:4:15
  |
4 | struct Generic<T> {
  |               ^
